// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Компонент ProductItem соответствует снапшоту без корзины: ProductItem без корзины 1`] = `
<div>
  <div
    class="ProductItem card w-100 mb-4"
    data-testid="69"
  >
    <img
      class="Image card-img-top"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
    />
    <div
      class="card-body"
    >
      <h5
        class="ProductItem-Name card-title"
      >
        bipki
      </h5>
      <p
        class="ProductItem-Price card-text"
      >
        $
        420
      </p>
      <a
        class="ProductItem-DetailsLink card-link"
        href="/catalog/69"
      >
        Details
      </a>
    </div>
  </div>
</div>
`;

exports[`Компонент ProductItem соответствует снапшоту с корзиной: ProductItem с корзиной 1`] = `
<div>
  <div
    class="ProductItem card w-100 mb-4"
    data-testid="69"
  >
    <img
      class="Image card-img-top"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAQAAAC1HAwCAAAAC0lEQVR42mNkMAYAADkANVKH3ScAAAAASUVORK5CYII="
    />
    <div
      class="card-body"
    >
      <h5
        class="ProductItem-Name card-title"
      >
        bipki
      </h5>
      <p
        class="ProductItem-Price card-text"
      >
        $
        420
      </p>
      <a
        class="ProductItem-DetailsLink card-link"
        href="/catalog/69"
      >
        Details
      </a>
      <span
        class="CartBadge text-success mx-3"
      >
        Item in cart
      </span>
    </div>
  </div>
</div>
`;
